# astro-medallion

./: .gitignore  README.md  astro-medallion.kicad_pcb  astro-medallion.kicad_prl  astro-medallion.kicad_pro  astro-medallion.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
astro-medallion/: Cargo.toml  README.md
astro-medallion-lib/: Cargo.toml
astro-medallion-lib/src/: astronomy.rs  display.rs  lib.rs  rgb.rs  rtc.rs
astro-medallion/src/: lib.rs
local/: Custom.kicad_sym  Dialight_587_addr_5050_LED.bak  Dialight_587_addr_5050_LED.kicad_sym
local/Dialight-587.pretty/: LED_Dialight587_PLCC4_5.0x5.0mm_P3.2mm.kicad_mod
local/Images.pretty/: Aquarius.kicad_mod  Aries.kicad_mod  Aries2.kicad_mod  Cancer.kicad_mod  Capricorn.kicad_mod  Gemini.kicad_mod  Leo.kicad_mod  Libra.kicad_mod  Pisces.kicad_mod  Sagittarius.kicad_mod  Scorpio.kicad_mod  Taurus.kicad_mod  Virgo.kicad_mod
local/Lumileds-L128.pretty/: Dialight-L128.kicad_mod
