[package]
name = "astro-medallion"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
]}

esp-hal = { version = "0.22.0", features = [
    "esp32c3",
] }
esp-println = { version = "0.12.0", features = ["esp32c3", "log"] }
log = { version = "0.4.21" }
esp-alloc = { version = "0.5.0" }
critical-section = "1.2.0"
astro-medallion-lib = { path = "../astro-medallion-lib"}
embedded-hal = "1.0.0"
noline = "0.5.1"
embedded-io = "0.6.1"
mcp794xx = "0.3.0"
chrono = { version = "0.4.39", default-features = false, features = ["alloc"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
